--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-charts-community": "^11.0.4",
+    "ag-charts-react": "^11.0.4",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "framer-motion": "^11.18.0",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
